Refactor MStack to improve time complexity when adding an element - From using LinkedList to store the ordered values which used O(n) to ArrayList, by using binary search, now using O(log n)